[package]
name = "mirrord-overseer"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
nix = { workspace = true, features = ["process", "socket", "uio", "fs", "poll", "event"] }
thiserror.workspace = true

#[dev-dependencies]
libseccomp = { version = "0.3.0", features = ["const-syscall"] }
rand = "0.8"
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "net"] }
